Modified script files and Help doc hooks
Pointing the Help doc hooks to the MarkDown site.  This has not been
fully deployed there so there may still be minor changes.
Made some obvious launcher script changes.  These may also change
further depending on packaging needs.
This is WIP, not final.